--- a/step3.ipynb
+++ b/step3.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit"
+   "display_name": "Python 3.8.3 32-bit"
   },
   "metadata": {
    "interpreter": {
@@ -23,7 +23,7 @@
    }
   },
   "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   "hash": "228e651cc4a48423604d0443f50a86427611fe0978b12785d27282ccd6ac66f5"
   }
  },
  "nbformat": 4,
@@ -33,10 +33,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import Environment\n",
-    "import Shop\n",
-    "from mab.ts_learner import *\n",
-    "from mab.ucb_learner import *\n",
+    "import Environment\r\n",
+    "import Shop\r\n",
+    "from mab.ts_learner import *\r\n",
+    "from mab.ucb_learner import *\r\n",
     "from utilities import *"
    ],
    "outputs": [],
@@ -58,24 +58,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "shop_ts = Shop.Shop()\n",
-    "shop_ucb = Shop.Shop()\n",
-    "shop_clairvoyant = Shop.Shop()\n",
-    "\n",
-    "print(shop_ts.prices1)\n",
-    "print(shop_ts.prices2)\n",
-    "\n",
-    "env = Environment.Environment(shop_clairvoyant.prices1,shop_clairvoyant.prices2,shop_clairvoyant.discounts)\n",
-    "\n",
-    "# The environment decides the conversion rates, which are shared among all the shops.\n",
-    "shop_clairvoyant.set_conv_rate(env.true_conv1, env.true_conv2)\n",
-    "shop_ts.set_conv_rate(env.true_conv1,env.true_conv2)\n",
-    "shop_ucb.set_conv_rate(env.true_conv1, env.true_conv2)\n",
-    "\n",
-    "#Initialize learners\n",
-    "n_arms = len(env.prices1)\n",
-    "shop_ts.set_price_learner('TS', n_arms)\n",
-    "shop_ucb.set_price_learner('UCB', n_arms)\n"
+    "shop_ts = Shop.Shop()\r\n",
+    "shop_ucb = Shop.Shop()\r\n",
+    "shop_clairvoyant = Shop.Shop()\r\n",
+    "\r\n",
+    "print(shop_ts.prices1)\r\n",
+    "print(shop_ts.prices2)\r\n",
+    "\r\n",
+    "env = Environment.Environment(shop_clairvoyant.prices1,shop_clairvoyant.prices2,shop_clairvoyant.discounts)\r\n",
+    "\r\n",
+    "# The environment decides the conversion rates, which are shared among all the shops.\r\n",
+    "shop_clairvoyant.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
+    "shop_ts.set_conv_rate(env.true_conv1,env.true_conv2)\r\n",
+    "shop_ucb.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
+    "\r\n",
+    "#Initialize learners\r\n",
+    "n_arms = len(env.prices1)\r\n",
+    "shop_ts.set_price_learner('TS', n_arms)\r\n",
+    "shop_ucb.set_price_learner('UCB', n_arms)\r\n"
    ],
    "outputs": [
     {
@@ -93,15 +93,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# we have fixed promo fractions\n",
-    "promo_fractions = np.array([[0.3, 0.2, 0.25, 0.25],     # every row is a customer class\n",
-    "                            [0.2, 0.25, 0.30, 0.25],     # every column is a promo type   \n",
-    "                            [0.1, 0.2, 0.3, 0.4],\n",
-    "                            [0.15, 0.15, 0.45, 0.25]])\n",
-    "\n",
-    "# we have a fixed price for item 2\n",
-    "price2_index = 2\n",
-    "price2 = env.prices2[price2_index]\n",
+    "# we have fixed promo fractions\r\n",
+    "promo_fractions = np.array([[0.3, 0.2, 0.25, 0.25],     # every row is a customer class\r\n",
+    "                            [0.2, 0.25, 0.30, 0.25],     # every column is a promo type   \r\n",
+    "                            [0.1, 0.2, 0.3, 0.4],\r\n",
+    "                            [0.15, 0.15, 0.45, 0.25]])\r\n",
+    "\r\n",
+    "# we have a fixed price for item 2\r\n",
+    "price2_index = 2\r\n",
+    "price2 = env.prices2[price2_index]\r\n",
     "max_ind_reward = price2 + max(env.prices1)"
    ],
    "outputs": [],
@@ -111,25 +111,25 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "#### get clairvoyant price\n",
-    "expected_rewards = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\n",
-    "customers_mean = np.array([25, 25, 25, 25])\n",
-    "\n",
-    "for i in range(len(env.prices1)):\n",
-    "    for j in range(env.n_classes):\n",
-    "        expected_reward_from_class = customers_mean[j]*env.prices1[i]*env.true_conv1[j, i]\n",
-    "        print(\"Expected reward from item 1 for price-class\", i, \"-\", j, \"----->\", expected_reward_from_class)\n",
-    "        for k in range(len(env.discounts)):\n",
-    "            expected_reward_from_class += promo_fractions[j,k]*customers_mean[j]*env.true_conv1[j, i]*price2*env.true_conv2[k, j, price2_index]*(1 - env.discounts[k])\n",
-    "        expected_rewards[i] += expected_reward_from_class\n",
-    "\n",
-    "        print(\"Expected Reward for Price\", i, \"from class\", j, \"--->\", expected_reward_from_class)\n",
-    "        print(\"************\")\n",
-    "\n",
-    "print(env.prices1)\n",
-    "print(expected_rewards)\n",
-    "\n",
-    "clairvoyant_price_index = np.argmax(expected_rewards)\n",
+    "#### get clairvoyant price\r\n",
+    "expected_rewards = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\r\n",
+    "customers_mean = np.array([25, 25, 25, 25])\r\n",
+    "\r\n",
+    "for i in range(len(env.prices1)):\r\n",
+    "    for j in range(env.n_classes):\r\n",
+    "        expected_reward_from_class = customers_mean[j]*env.prices1[i]*env.true_conv1[j, i]\r\n",
+    "        print(\"Expected reward from item 1 for price-class\", i, \"-\", j, \"----->\", expected_reward_from_class)\r\n",
+    "        for k in range(len(env.discounts)):\r\n",
+    "            expected_reward_from_class += promo_fractions[j,k]*customers_mean[j]*env.true_conv1[j, i]*price2*env.true_conv2[k, j, price2_index]*(1 - env.discounts[k])\r\n",
+    "        expected_rewards[i] += expected_reward_from_class\r\n",
+    "\r\n",
+    "        print(\"Expected Reward for Price\", i, \"from class\", j, \"--->\", expected_reward_from_class)\r\n",
+    "        print(\"************\")\r\n",
+    "\r\n",
+    "print(env.prices1)\r\n",
+    "print(expected_rewards)\r\n",
+    "\r\n",
+    "clairvoyant_price_index = np.argmax(expected_rewards)\r\n",
     "clairvoyant_price = env.prices1[clairvoyant_price_index]"
    ],
    "outputs": [
@@ -209,7 +209,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "print(max_ind_reward)\n",
+    "print(max_ind_reward)\r\n",
     "print(clairvoyant_price)"
    ],
    "outputs": [
@@ -228,112 +228,112 @@
    "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "days = 365\n",
-    "\n",
-    "ts_rewards_per_class_per_day = []\n",
-    "u_rewards_per_class_per_day = []\n",
-    "clairvoyant_per_class_per_day = []\n",
-    "\n",
-    "for day in range(days):\n",
-    "    #Generating customers for the next day\n",
-    "    env.generate_next_day_customers()\n",
-    "    \n",
-    "    #Every shop knows how many customers are coming\n",
-    "    shop_clairvoyant.set_expected_customers(env.customers)\n",
-    "    shop_ts.set_expected_customers(env.customers)\n",
-    "    shop_ucb.set_expected_customers(env.customers)\n",
-    "\n",
-    "    #Pull arm from learners \n",
-    "\n",
-    "    chosen_price_ts = shop_ts.price_learner.pull_arm()\n",
-    "    #chosen_price_ts = shop_ts.price_learner.pull_arm()\n",
-    "    chosen_price_ucb = shop_ucb.price_learner.pull_arm() \n",
-    "\n",
-    "    '''#Calculate the best promos for the current pulled arms\n",
-    "    shop_clairvoyant.best_promo_per_class()\n",
-    "    shop_ts.best_promo_per_class(chosen_price_ts)\n",
-    "    shop_ucb.best_promo_per_class(chosen_price_ucb)\n",
-    "    \n",
-    "    #Shuffle customers and unroll customers and coupons array\n",
-    "    shop_clairvoyant.print_coupons()\n",
-    "    shop_ts.print_coupons()\n",
-    "    shop_ucb.print_coupons()'''\n",
-    "\n",
-    "    ##### Will print coupons manually here\n",
-    "    ##### The Ratios are fixed\n",
-    "\n",
-    "    #promos = shop_clairvoyant.print_coupons(shop_ts, shop_ucb, promo_fractions)\n",
-    "\n",
-    "    enum_customers = list(enumerate(env.customers))\n",
-    "    customers = np.concatenate([np.ones(c).astype(int)*p for p,c in enum_customers])\n",
-    "    np.random.shuffle(customers)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    clairvoyant_per_class = []\n",
-    "    revenue_ts = []\n",
-    "    revenue_ucb = []\n",
-    "    revenue_c = []\n",
-    "    \n",
-    "    #np.random.shuffle(shop_ts.customers_random)\n",
-    "\n",
-    "    #print(shop_ts.prices2)\n",
-    "    #print(shop_ts.best_price[1])\n",
-    "\n",
-    "    for cust in customers:\n",
-    "        partial_revenue = 0\n",
-    "        cust = int(cust)\n",
-    "        #Check if first item has been bought and update the parameters\n",
-    "        selected_promo = 0\n",
-    "        #if len(promos[cust]) > 0:\n",
-    "        selected_promo = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions[cust])\n",
-    "\n",
-    "        cr1 = shop_clairvoyant.conv1[cust, clairvoyant_price_index]\n",
-    "        cr2 = shop_clairvoyant.conv2[selected_promo, cust, price2_index]\n",
-    "        ex_ind = clairvoyant_price*cr1 + price2*cr1*cr2*(1-shop_clairvoyant.discounts[selected_promo])   \n",
-    "\n",
-    "        '''\n",
-    "        ts_has_bought1 = env.round1(cust, shop_ts.best_price[0])\n",
-    "        #shop_ts.price_learner.update(chosen_price_ts, ts_has_bought1, cust)\n",
-    "\n",
-    "        ucb_has_bought1 = env.round1(cust, shop_ucb.best_price[0])\n",
-    "        #shop_ucb.price_learner.update(chosen_price_ucb, ucb_has_bought1, cust)\n",
-    "        \n",
-    "        partial_revenue_ts = ts_has_bought1*shop_ts.best_price[0]\n",
-    "        partial_revenue_ucb = ucb_has_bought1*shop_ucb.best_price[0]'''\n",
-    "\n",
-    "        ts_has_bought1 = env.round1(cust, env.prices1[chosen_price_ts])\n",
-    "        ucb_has_bought1 = env.round1(cust, env.prices1[chosen_price_ucb])\n",
-    "        c_has_bought1 = env.round1(cust, clairvoyant_price)\n",
-    "\n",
-    "        partial_revenue_ts = ts_has_bought1*shop_ts.prices1[chosen_price_ts]\n",
-    "        partial_revenue_ucb = ucb_has_bought1*shop_ucb.prices1[chosen_price_ucb]\n",
-    "        partial_revenue_c = c_has_bought1*clairvoyant_price\n",
-    "\n",
-    "        #Check if second item has been bought\n",
-    "        if ts_has_bought1 == 1:\n",
-    "            partial_revenue_ts += price2*shop_ts.conv2[selected_promo, cust, price2_index]*(1-shop_ts.discounts[selected_promo])\n",
-    "        revenue_ts.append(partial_revenue_ts)\n",
-    "\n",
-    "        norm_ts = partial_revenue_ts / max_ind_reward\n",
-    "        shop_ts.price_learner.update(chosen_price_ts, norm_ts)\n",
-    "        \n",
-    "        if ucb_has_bought1 == 1:\n",
-    "            partial_revenue_ucb += price2*shop_ucb.conv2[selected_promo, cust, price2_index]*(1-shop_ucb.discounts[selected_promo])\n",
-    "        revenue_ucb.append(partial_revenue_ucb)\n",
-    "\n",
-    "        norm_ucb = partial_revenue_ucb / max_ind_reward\n",
-    "        shop_ucb.price_learner.update(chosen_price_ucb, norm_ucb)\n",
-    "\n",
-    "        if c_has_bought1 == 1:\n",
-    "            partial_revenue_c += price2*shop_clairvoyant.conv2[selected_promo, cust, price2_index]*(1-shop_clairvoyant.discounts[selected_promo])\n",
-    "        revenue_c.append(partial_revenue_c)\n",
-    "        #expected_revenue = shop_clairvoyant.best_price[0]*env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])] + env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])]*env.true_conv2[shop_clairvoyant.matched_promos[cust], cust, index(env.prices2, shop_clairvoyant.best_price[1])]*shop_clairvoyant.best_price[1]*(1-shop_clairvoyant.discounts[shop_clairvoyant.matched_promos[cust]])\n",
-    "        #clairvoyant_per_class.append(expected_revenue)\n",
-    "    \n",
-    "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\n",
-    "    u_rewards_per_class_per_day.append(np.mean(revenue_ucb))\n",
-    "    clairvoyant_per_class_per_day.append(np.mean(revenue_c))\n"
+    "days = 365\r\n",
+    "\r\n",
+    "ts_rewards_per_class_per_day = []\r\n",
+    "u_rewards_per_class_per_day = []\r\n",
+    "clairvoyant_per_class_per_day = []\r\n",
+    "\r\n",
+    "for day in range(days):\r\n",
+    "    #Generating customers for the next day\r\n",
+    "    env.generate_next_day_customers()\r\n",
+    "    \r\n",
+    "    #Every shop knows how many customers are coming\r\n",
+    "    shop_clairvoyant.set_expected_customers(env.customers)\r\n",
+    "    shop_ts.set_expected_customers(env.customers)\r\n",
+    "    shop_ucb.set_expected_customers(env.customers)\r\n",
+    "\r\n",
+    "    #Pull arm from learners \r\n",
+    "\r\n",
+    "    chosen_price_ts = shop_ts.price_learner.pull_arm()\r\n",
+    "    #chosen_price_ts = shop_ts.price_learner.pull_arm()\r\n",
+    "    chosen_price_ucb = shop_ucb.price_learner.pull_arm() \r\n",
+    "\r\n",
+    "    '''#Calculate the best promos for the current pulled arms\r\n",
+    "    shop_clairvoyant.best_promo_per_class()\r\n",
+    "    shop_ts.best_promo_per_class(chosen_price_ts)\r\n",
+    "    shop_ucb.best_promo_per_class(chosen_price_ucb)\r\n",
+    "    \r\n",
+    "    #Shuffle customers and unroll customers and coupons array\r\n",
+    "    shop_clairvoyant.print_coupons()\r\n",
+    "    shop_ts.print_coupons()\r\n",
+    "    shop_ucb.print_coupons()'''\r\n",
+    "\r\n",
+    "    ##### Will print coupons manually here\r\n",
+    "    ##### The Ratios are fixed\r\n",
+    "\r\n",
+    "    #promos = shop_clairvoyant.print_coupons(shop_ts, shop_ucb, promo_fractions)\r\n",
+    "\r\n",
+    "    enum_customers = list(enumerate(env.customers))\r\n",
+    "    customers = np.concatenate([np.ones(c).astype(int)*p for p,c in enum_customers])\r\n",
+    "    np.random.shuffle(customers)\r\n",
+    "    \r\n",
+    "\r\n",
+    "\r\n",
+    "    clairvoyant_per_class = []\r\n",
+    "    revenue_ts = []\r\n",
+    "    revenue_ucb = []\r\n",
+    "    revenue_c = []\r\n",
+    "    \r\n",
+    "    #np.random.shuffle(shop_ts.customers_random)\r\n",
+    "\r\n",
+    "    #print(shop_ts.prices2)\r\n",
+    "    #print(shop_ts.best_price[1])\r\n",
+    "\r\n",
+    "    for cust in customers:\r\n",
+    "        partial_revenue = 0\r\n",
+    "        cust = int(cust)\r\n",
+    "        #Check if first item has been bought and update the parameters\r\n",
+    "        selected_promo = 0\r\n",
+    "        #if len(promos[cust]) > 0:\r\n",
+    "        selected_promo = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions[cust])\r\n",
+    "\r\n",
+    "        cr1 = shop_clairvoyant.conv1[cust, clairvoyant_price_index]\r\n",
+    "        cr2 = shop_clairvoyant.conv2[selected_promo, cust, price2_index]\r\n",
+    "        ex_ind = clairvoyant_price*cr1 + price2*cr1*cr2*(1-shop_clairvoyant.discounts[selected_promo])   \r\n",
+    "\r\n",
+    "        '''\r\n",
+    "        ts_has_bought1 = env.round1(cust, shop_ts.best_price[0])\r\n",
+    "        #shop_ts.price_learner.update(chosen_price_ts, ts_has_bought1, cust)\r\n",
+    "\r\n",
+    "        ucb_has_bought1 = env.round1(cust, shop_ucb.best_price[0])\r\n",
+    "        #shop_ucb.price_learner.update(chosen_price_ucb, ucb_has_bought1, cust)\r\n",
+    "        \r\n",
+    "        partial_revenue_ts = ts_has_bought1*shop_ts.best_price[0]\r\n",
+    "        partial_revenue_ucb = ucb_has_bought1*shop_ucb.best_price[0]'''\r\n",
+    "\r\n",
+    "        ts_has_bought1 = env.round1(cust, env.prices1[chosen_price_ts])\r\n",
+    "        ucb_has_bought1 = env.round1(cust, env.prices1[chosen_price_ucb])\r\n",
+    "        c_has_bought1 = env.round1(cust, clairvoyant_price)\r\n",
+    "\r\n",
+    "        partial_revenue_ts = ts_has_bought1*shop_ts.prices1[chosen_price_ts]\r\n",
+    "        partial_revenue_ucb = ucb_has_bought1*shop_ucb.prices1[chosen_price_ucb]\r\n",
+    "        partial_revenue_c = c_has_bought1*clairvoyant_price\r\n",
+    "\r\n",
+    "        #Check if second item has been bought\r\n",
+    "        if ts_has_bought1 == 1:\r\n",
+    "            partial_revenue_ts += price2*shop_ts.conv2[selected_promo, cust, price2_index]*(1-shop_ts.discounts[selected_promo])\r\n",
+    "        revenue_ts.append(partial_revenue_ts)\r\n",
+    "\r\n",
+    "        norm_ts = partial_revenue_ts / max_ind_reward\r\n",
+    "        shop_ts.price_learner.update(chosen_price_ts, norm_ts)\r\n",
+    "        \r\n",
+    "        if ucb_has_bought1 == 1:\r\n",
+    "            partial_revenue_ucb += price2*shop_ucb.conv2[selected_promo, cust, price2_index]*(1-shop_ucb.discounts[selected_promo])\r\n",
+    "        revenue_ucb.append(partial_revenue_ucb)\r\n",
+    "\r\n",
+    "        norm_ucb = partial_revenue_ucb / max_ind_reward\r\n",
+    "        shop_ucb.price_learner.update(chosen_price_ucb, norm_ucb)\r\n",
+    "\r\n",
+    "        if c_has_bought1 == 1:\r\n",
+    "            partial_revenue_c += price2*shop_clairvoyant.conv2[selected_promo, cust, price2_index]*(1-shop_clairvoyant.discounts[selected_promo])\r\n",
+    "        revenue_c.append(partial_revenue_c)\r\n",
+    "        #expected_revenue = shop_clairvoyant.best_price[0]*env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])] + env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])]*env.true_conv2[shop_clairvoyant.matched_promos[cust], cust, index(env.prices2, shop_clairvoyant.best_price[1])]*shop_clairvoyant.best_price[1]*(1-shop_clairvoyant.discounts[shop_clairvoyant.matched_promos[cust]])\r\n",
+    "        #clairvoyant_per_class.append(expected_revenue)\r\n",
+    "    \r\n",
+    "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\r\n",
+    "    u_rewards_per_class_per_day.append(np.mean(revenue_ucb))\r\n",
+    "    clairvoyant_per_class_per_day.append(np.mean(revenue_c))\r\n"
    ],
    "outputs": [],
    "metadata": {}
