--- a/step8.ipynb
+++ b/step8.ipynb
@@ -43,7 +43,7 @@
     "small_n_matching_arms = len(small_matching_arms)\r\n",
     "\r\n",
     "shop_small_ts.set_assignment_learner('TS', small_n_matching_arms)\r\n",
-    "shop_ucb.set_assignment_learner('UCB', small_n_matching_arms)\r\n",
+    "shop_ucb.set_assignment_learner('UCB', 10000)\r\n",
     "\r\n",
     "shop_small_ts.set_price_learner('TS', 5)\r\n",
     "shop_ucb.set_price_learner('UCB', 5)\r\n",
@@ -108,29 +108,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "clairvoyant_promo_fractions"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[1.  0.  0.  0. ]\n",
-      " [0.2 0.  0.8 0. ]\n",
-      " [0.4 0.6 0.  0. ]\n",
-      " [0.  0.4 0.  0.6]]\n",
-      "240.0\n",
-      "300.0\n",
-      "30054.215975063\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "source": [
     "days = 365\r\n",
     "\r\n",
     "u_rewards_per_class_per_day = []\r\n",
@@ -144,14 +121,17 @@
     "customers_ie = np.array([25, 25, 25, 25])\r\n",
     "\r\n",
     "for day in range(days):\r\n",
+    "    \r\n",
     "    if day == 0:\r\n",
     "        shop_ts.set_expected_customers(customers_ie)\r\n",
     "        shop_big_ts.set_expected_customers(customers_ie)\r\n",
     "        shop_ucb.set_expected_customers(customers_ie)\r\n",
+    "        shop_ucb.assignment_learner.set_rows(customers_ie)\r\n",
     "        shop_small_ts.set_expected_customers(customers_ie)\r\n",
     "    else:\r\n",
     "        customers_em = (customers_em*(day-1) + env.customers) / day\r\n",
     "        shop_ucb.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
+    "        #shop_ucb.assignment_learner.set_rows((customers_em + 0.99).astype(int))\r\n",
     "        shop_small_ts.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
     "        shop_ts.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
     "        shop_big_ts.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
@@ -186,8 +166,10 @@
     "    expected_customers_small_ts = shop_small_ts.get_customer_list()\r\n",
     "\r\n",
     "    # get expected list of promos\r\n",
-    "    expected_promos_u = shop_ucb.get_promo_list(generated_promo_ratios) \r\n",
+    "    expected_promos_u = shop_ucb.get_promo_list(generated_promo_ratios)\r\n",
     "    expected_promos_small_ts = shop_small_ts.get_promo_list(generated_promo_ratios) \r\n",
+    "\r\n",
+    "    shop_ucb.assignment_learner.set_cols(expected_promos_u)\r\n",
     "\r\n",
     "    #Pull arm price1 from learners \r\n",
     "    chosen_price1_small_ts = env.prices1[shop_small_ts.price_learner.pull_arm()]\r\n",
@@ -199,10 +181,10 @@
     "    \r\n",
     "\r\n",
     "    # generate the connections and their expected weights\r\n",
-    "    matched_tuples_u = shop_ucb.assignment_learner.pull_arm_matching(expected_customers_u, expected_promos_u, small_matching_arms)\r\n",
+    "    matched_tuples_u = shop_ucb.assignment_learner.pull_arm(expected_customers_u, expected_promos_u)\r\n",
     "    matched_tuples_small_ts = shop_small_ts.assignment_learner.pull_arm_matching(expected_customers_small_ts, expected_promos_small_ts, small_matching_arms)\r\n",
     " \r\n",
-    "    promo_fractions_u = shop_ucb.get_promo_fractions_from_tuples(matched_tuples_u)\r\n",
+    "    promo_fractions_u = shop_ucb.get_promo_fractions_from_matched_tuples(matched_tuples_u)\r\n",
     "    promo_fractions_small_ts = shop_small_ts.get_promo_fractions_from_tuples(matched_tuples_small_ts)\r\n",
     "\r\n",
     "    # simulate the day\r\n",
@@ -276,7 +258,7 @@
     "        norm_c_ind_reward = c_ind_reward / max_ind_reward\r\n",
     "\r\n",
     "        # update price learner and assignment learner\r\n",
-    "        shop_ucb.assignment_learner.update(small_matching_arms.index((cust, selected_promo_u)), norm_u_ind_reward)\r\n",
+    "        \r\n",
     "        shop_small_ts.assignment_learner.update(small_matching_arms.index((cust, selected_promo_small_ts)), norm_small_ts_ind_reward)\r\n",
     "        \r\n",
     "        shop_ts.price_learner.update(chosen_price_tuple_idx_ts, norm_ts_ind_reward)\r\n",
@@ -293,6 +275,8 @@
     "        revenue_big_ts.append(big_ts_ind_reward)\r\n",
     "        revenue_c.append(c_ind_reward)\r\n",
     "\r\n",
+    "    shop_ucb.assignment_learner.update(matched_tuples_u, revenue_ucb)\r\n",
+    "\r\n",
     "    small_ts_rewards_per_class_per_day.append(np.mean(revenue_small_ts))\r\n",
     "    u_rewards_per_class_per_day.append(np.mean(revenue_ucb))\r\n",
     "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\r\n",
@@ -304,15 +288,175 @@
    "outputs": [
     {
      "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'UCB_Detector' object has no attribute 'n_rows'",
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-ba0c6b162b4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0;31m# update price learner and assignment learner\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 144\u001b[0;31m         \u001b[0mshop_ucb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massignment_learner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msmall_matching_arms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcust\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mselected_promo_u\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm_u_ind_reward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    145\u001b[0m         \u001b[0mshop_small_ts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massignment_learner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msmall_matching_arms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcust\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mselected_promo_small_ts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm_small_ts_ind_reward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/d/Google Drive/POLIMI/Data Intelligence Applications/Data_Intelligence_Application/mab/ucb_detector.py\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, pulled_arms, rewards)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpulled_arms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrewards\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mpulled_arms_flat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel_multi_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpulled_arms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_rows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_cols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mpulled_arm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpulled_arms_flat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrewards\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchange_detection\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpulled_arm\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'UCB_Detector' object has no attribute 'n_rows'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7320/786577795.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     75\u001b[0m     \u001b[0mmatched_tuples_small_ts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mshop_small_ts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massignment_learner\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpull_arm_matching\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexpected_customers_small_ts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpected_promos_small_ts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msmall_matching_arms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 77\u001b[1;33m     \u001b[0mpromo_fractions_u\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mshop_ucb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_promo_fractions_from_matched_tuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatched_tuples_u\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     78\u001b[0m     \u001b[0mpromo_fractions_small_ts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mshop_small_ts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_promo_fractions_from_tuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatched_tuples_small_ts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\alice\\Documents\\Polimi\\II anno\\Secondo Semestre\\DIA\\Data_Intelligence_Application\\Shop.py\u001b[0m in \u001b[0;36mget_promo_fractions_from_matched_tuples\u001b[1;34m(self, matched_tuples)\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     86\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_promo_fractions_from_matched_tuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmatched_tuples\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 87\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatched_tuples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmatched_tuples\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     88\u001b[0m         \u001b[0mpromo_fractions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_classes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiscounts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\alice\\Documents\\Polimi\\II anno\\Secondo Semestre\\DIA\\Data_Intelligence_Application\\Shop.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     86\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_promo_fractions_from_matched_tuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmatched_tuples\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 87\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatched_tuples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmatched_tuples\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     88\u001b[0m         \u001b[0mpromo_fractions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_classes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiscounts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "matched_tuples_u"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "        17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+       "        34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,\n",
+       "        51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,\n",
+       "        68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84,\n",
+       "        85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99],\n",
+       "       dtype=int64),\n",
+       " array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "        17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+       "        34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,\n",
+       "        51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,\n",
+       "        68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84,\n",
+       "        85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99],\n",
+       "       dtype=int64))"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "matched_tuples_u"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[(0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (0, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 0),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (1, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 1),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (2, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 2),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3),\n",
+       " (3, 3)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
     }
    ],
    "metadata": {}
@@ -442,13 +586,6 @@
      }
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
