--- a/step6.ipynb
+++ b/step6.ipynb
@@ -21,27 +21,16 @@
     "\r\n",
     "shop_ts = Shop.Shop()\r\n",
     "shop_big_ts = Shop.Shop()\r\n",
-<<<<<<< HEAD
     "shop_ts3 = Shop.Shop()\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "shop_clairvoyant = Shop.Shop()\r\n",
     "\r\n",
     "env = Environment.Environment(shop_small_ts.prices1, shop_small_ts.prices2, shop_small_ts.discounts)\r\n",
     "\r\n",
-<<<<<<< HEAD
-    "shop_small_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
+    "\"\"\"shop_small_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
     "shop_ucb.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
     "\r\n",
     "shop_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
-    "shop_big_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
-=======
-    "# shop_small_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
-    "# shop_ucb.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
-    "\r\n",
-    "# shop_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
-    "# shop_big_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
+    "shop_big_ts.set_conv_rate(env.true_conv1, env.true_conv2)\"\"\"\r\n",
     "shop_clairvoyant.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
     "\r\n",
     "\r\n",
@@ -66,13 +55,10 @@
     "shop_ts.set_price_learner('TS', n_price_arms)\r\n",
     "shop_ts.set_assignment_learner('TS', n_matching_arms)\r\n",
     "\r\n",
-<<<<<<< HEAD
     "shop_ts3.set_price_learner('TS', 5)\r\n",
     "shop_ts3.set_price2_learner('TS', n_price_arms)\r\n",
     "shop_ts3.set_assignment_learner('TS', n_matching_arms)\r\n",
     "\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "\r\n",
     "shop_big_ts.set_assignment_learner('TS', n_matching_arms)"
    ],
@@ -121,7 +107,6 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-<<<<<<< HEAD
       "[[0.6 0.  0.4 0. ]\n",
       " [1.  0.  0.  0. ]\n",
       " [0.  1.  0.  0. ]\n",
@@ -129,15 +114,6 @@
       "200.0\n",
       "250.0\n",
       "25575.007745962157\n"
-=======
-      "[[0.2 0.8 0.  0. ]\n",
-      " [0.4 0.  0.  0.6]\n",
-      " [0.  0.2 0.8 0. ]\n",
-      " [1.  0.  0.  0. ]]\n",
-      "80.0\n",
-      "300.0\n",
-      "24371.744200326626\n"
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
      ]
     }
    ],
@@ -153,10 +129,7 @@
     "small_ts_rewards_per_class_per_day = []\r\n",
     "\r\n",
     "ts_rewards_per_class_per_day = []\r\n",
-<<<<<<< HEAD
     "ts3_rewards_per_class_per_day = []\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "big_ts_rewards_per_class_per_day = []\r\n",
     "calt_rewards_per_class_per_day = []\r\n",
     "\r\n",
@@ -167,11 +140,7 @@
     "    if day == 0:\r\n",
     "        shop_ts.set_expected_customers(customers_ie)\r\n",
     "        shop_big_ts.set_expected_customers(customers_ie)\r\n",
-<<<<<<< HEAD
     "        shop_ts3.set_expected_customers(customers_ie)\r\n",
-=======
-    "\r\n",
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "        shop_ucb.set_expected_customers(customers_ie)\r\n",
     "        shop_small_ts.set_expected_customers(customers_ie)\r\n",
     "    else:\r\n",
@@ -179,10 +148,7 @@
     "        shop_ucb.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
     "        shop_small_ts.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
     "        shop_ts.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
-<<<<<<< HEAD
     "        shop_ts3.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "        shop_big_ts.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
     "    \r\n",
     "    # select the price for 2 step learner\r\n",
@@ -210,7 +176,6 @@
     "    price1_big_ts = env.prices1[price1idx_big_ts]\r\n",
     "    price2_big_ts = env.prices2[price2idx_big_ts]\r\n",
     "\r\n",
-<<<<<<< HEAD
     "    # pricing and matching for 3-step dependent learner\r\n",
     "    price1idx_ts3 = shop_ts3.price_learner.pull_arm()\r\n",
     "    price2idx_ts3 = shop_ts3.price2_learner.pull_arm_price2(price1idx_ts3, price_arms)\r\n",
@@ -224,8 +189,6 @@
     "    matched_tuples_ts3 = shop_ts3.assignment_learner.pull_arm_matching(expected_customers_ts3, expected_promos_ts3, matching_arms, price1idx_ts3, price2idx_ts3)\r\n",
     "    promo_fractions_ts3 = shop_ts.get_promo_fractions_from_tuples(matched_tuples_ts3)\r\n",
     "\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "    # get expected list of customers\r\n",
     "    expected_customers_u = shop_ucb.get_customer_list()\r\n",
     "    expected_customers_small_ts = shop_small_ts.get_customer_list()\r\n",
@@ -260,10 +223,7 @@
     "    revenue_small_ts = []\r\n",
     "    revenue_ucb = []\r\n",
     "    revenue_ts = []\r\n",
-<<<<<<< HEAD
     "    revenue_ts3 = []\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "    revenue_big_ts = []\r\n",
     "    revenue_calt = []\r\n",
     "\r\n",
@@ -283,10 +243,7 @@
     "        selected_promo_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts[cust])\r\n",
     "        selected_promo_big_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_big_ts[cust])\r\n",
     "        selected_promo_calt = np.random.choice([0, 1, 2, 3], 1, p=cpf[cust])\r\n",
-<<<<<<< HEAD
     "        selected_promo_ts3 = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts3[cust])\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "\r\n",
     "        small_ts_buy1 = env.round1(cust, chosen_price1_small_ts)\r\n",
     "        small_ts_buy2 = 0\r\n",
@@ -303,14 +260,11 @@
     "        if ts_buy1:\r\n",
     "            ts_buy2 = env.round2(cust, selected_promo_ts, price2_ts)\r\n",
     "\r\n",
-<<<<<<< HEAD
     "        ts3_buy1 = env.round1(cust, price1_ts3)\r\n",
     "        ts3_buy2 = 0\r\n",
     "        if ts3_buy1:\r\n",
     "            ts3_buy2 = env.round2(cust, selected_promo_ts3, price2_ts3)\r\n",
     "\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "        big_ts_buy1 = env.round1(cust, price1_big_ts)\r\n",
     "        big_ts_buy2 = 0\r\n",
     "        if big_ts_buy1:\r\n",
@@ -327,15 +281,11 @@
     "        ts_ind_reward = ts_buy1*price1_ts + ts_buy2*price2_ts*(1-shop_ts.discounts[selected_promo_ts])\r\n",
     "        big_ts_ind_reward = big_ts_buy1*price1_big_ts + big_ts_buy2*price2_big_ts*(1-shop_big_ts.discounts[selected_promo_big_ts])\r\n",
     "        calt_ind_reward = calt_buy1*cp1 + calt_buy2*cp2*(1-shop_small_ts.discounts[selected_promo_calt])\r\n",
-<<<<<<< HEAD
     "        ts3_ind_reward = ts3_buy1*price1_ts3 + ts3_buy2*price2_ts3*(1-shop_ts3.discounts[selected_promo_ts3])\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "        \r\n",
     "        norm_small_ts_ind_reward = small_ts_ind_reward / max_ind_reward\r\n",
     "        norm_u_ind_reward = u_ind_reward / max_ind_reward\r\n",
     "        norm_ts_ind_reward = ts_ind_reward / max_ind_reward\r\n",
-<<<<<<< HEAD
     "        norm_ts3_ind_reward = ts3_ind_reward / max_ind_reward\r\n",
     "        norm_big_ts_ind_reward = big_ts_ind_reward / max_ind_reward\r\n",
     "\r\n",
@@ -348,10 +298,6 @@
     "        matching_arm_index_ts3 = matching_arms.index((price1idx_ts3, price2idx_ts3, cust, selected_promo_ts3))\r\n",
     "        shop_ts3.assignment_learner.update(matching_arm_index_ts3, norm_ts3_ind_reward)\r\n",
     "\r\n",
-=======
-    "        norm_big_ts_ind_reward = big_ts_ind_reward / max_ind_reward\r\n",
-    "\r\n",
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "        # update price learner and assignment learner\r\n",
     "        shop_ucb.assignment_learner.update(small_matching_arms.index((cust, selected_promo_u)), norm_u_ind_reward)\r\n",
     "        shop_small_ts.assignment_learner.update(small_matching_arms.index((cust, selected_promo_small_ts)), norm_small_ts_ind_reward)\r\n",
@@ -367,20 +313,14 @@
     "        revenue_ucb.append(u_ind_reward)\r\n",
     "        revenue_small_ts.append(small_ts_ind_reward)\r\n",
     "        revenue_ts.append(ts_ind_reward)\r\n",
-<<<<<<< HEAD
     "        revenue_ts3.append(ts3_ind_reward)\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "        revenue_big_ts.append(big_ts_ind_reward)\r\n",
     "        revenue_calt.append(calt_ind_reward)\r\n",
     "\r\n",
     "    small_ts_rewards_per_class_per_day.append(np.mean(revenue_small_ts))\r\n",
     "    u_rewards_per_class_per_day.append(np.mean(revenue_ucb))\r\n",
     "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\r\n",
-<<<<<<< HEAD
     "    ts3_rewards_per_class_per_day.append(np.mean(revenue_ts3))\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "    big_ts_rewards_per_class_per_day.append(np.mean(revenue_big_ts))\r\n",
     "    calt_rewards_per_class_per_day.append(np.mean(revenue_calt))"
    ],
@@ -389,11 +329,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 16,
-=======
-   "execution_count": null,
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
    "source": [
     "print(np.cumsum(calt_rewards_per_class_per_day)[-1] - np.cumsum(small_ts_rewards_per_class_per_day)[-1])\r\n",
     "print(np.cumsum(calt_rewards_per_class_per_day)[-1] - np.cumsum(u_rewards_per_class_per_day)[-1])"
@@ -412,21 +348,14 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 22,
-=======
-   "execution_count": null,
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
    "source": [
     "import matplotlib.pyplot as plt\r\n",
     "plt.plot(np.cumsum(u_rewards_per_class_per_day), color='green', label='UCB')\r\n",
     "plt.plot(np.cumsum(calt_rewards_per_class_per_day), color='orange', label='Clairvoyant Alt')\r\n",
     "plt.plot(np.cumsum(small_ts_rewards_per_class_per_day), color='purple', label='3-Learner TS')\r\n",
     "plt.plot(np.cumsum(ts_rewards_per_class_per_day), color='red', label='2-step TS')\r\n",
-<<<<<<< HEAD
     "plt.plot(np.cumsum(ts3_rewards_per_class_per_day), color='black', label='3-step Dependent TS')\r\n",
-=======
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "plt.plot(np.cumsum(big_ts_rewards_per_class_per_day), color='blue', label='Big TS')\r\n",
     "\r\n",
     "plt.legend()\r\n",
@@ -461,16 +390,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 23,
    "source": [
     "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(ts_rewards_per_class_per_day)), color='red', label='2-step TS')\r\n",
     "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(ts3_rewards_per_class_per_day)), color='black', label='3-step Dependent TS')\r\n",
-=======
-   "execution_count": null,
-   "source": [
-    "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(ts_rewards_per_class_per_day)), color='red', label='2-step TS')\r\n",
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
     "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(big_ts_rewards_per_class_per_day)), color='blue', label='Big TS')\r\n",
     "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(small_ts_rewards_per_class_per_day)), color='purple', label='2-step TS')\r\n",
     "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(u_rewards_per_class_per_day)), color='green', label='Big TS')\r\n",
@@ -507,11 +430,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 19,
-=======
-   "execution_count": null,
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
    "source": [
     "plt.plot(u_rewards_per_class_per_day, color='green', label='UCB')"
    ],
@@ -553,11 +472,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-<<<<<<< HEAD
    "version": "3.8.3",
-=======
-   "version": "3.9.6",
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -569,17 +484,10 @@
   },
   "kernelspec": {
    "name": "python3",
-<<<<<<< HEAD
    "display_name": "Python 3.8.3 32-bit"
   },
   "interpreter": {
    "hash": "228e651cc4a48423604d0443f50a86427611fe0978b12785d27282ccd6ac66f5"
-=======
-   "display_name": "Python 3.9.6 64-bit"
-  },
-  "interpreter": {
-   "hash": "8dc9504be67acba47bacf60bff7f553f62706ea7a10aa24f4f54855ef6b1dd44"
->>>>>>> 96bf0cfb96a2363eb42a279ccd8a5ca9efb5243a
   }
  },
  "nbformat": 4,
