--- a/step6.ipynb
+++ b/step6.ipynb
@@ -131,7 +131,7 @@
     "ts_rewards_per_class_per_day = []\r\n",
     "ts3_rewards_per_class_per_day = []\r\n",
     "big_ts_rewards_per_class_per_day = []\r\n",
-    "calt_rewards_per_class_per_day = []\r\n",
+    "c_rewards_per_class_per_day = []\r\n",
     "\r\n",
     "customers_em = np.array([0, 0, 0, 0])\r\n",
     "customers_ie = np.array([25, 25, 25, 25])\r\n",
@@ -225,13 +225,13 @@
     "    revenue_ts = []\r\n",
     "    revenue_ts3 = []\r\n",
     "    revenue_big_ts = []\r\n",
-    "    revenue_calt = []\r\n",
+    "    revenue_c = []\r\n",
     "\r\n",
     "    small_ts_total_reward = 0\r\n",
     "    ucb_total_reward = 0\r\n",
     "    big_ts_total_reward = 0\r\n",
     "    ts_total_reward = 0\r\n",
-    "    calt_total_reward = 0\r\n",
+    "    c_total_reward = 0\r\n",
     "\r\n",
     "    c_count = 0\r\n",
     "\r\n",
@@ -242,7 +242,7 @@
     "        selected_promo_u = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_u[cust])\r\n",
     "        selected_promo_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts[cust])\r\n",
     "        selected_promo_big_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_big_ts[cust])\r\n",
-    "        selected_promo_calt = np.random.choice([0, 1, 2, 3], 1, p=cpf[cust])\r\n",
+    "        selected_promo_c = np.random.choice([0, 1, 2, 3], 1, p=cpf[cust])\r\n",
     "        selected_promo_ts3 = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts3[cust])\r\n",
     "\r\n",
     "        small_ts_buy1 = env.round1(cust, chosen_price1_small_ts)\r\n",
@@ -271,10 +271,10 @@
     "            big_ts_buy2 = env.round2(cust, selected_promo_big_ts, price2_big_ts)\r\n",
     "\r\n",
     "\r\n",
-    "        # calt_buy1 = env.round1(cust, cp1)\r\n",
-    "        # calt_buy2 = 0\r\n",
-    "        # if calt_buy1:\r\n",
-    "        #     calt_buy2 = env.round2(cust, selected_promo_calt, cp2)\r\n",
+    "        # c_buy1 = env.round1(cust, cp1)\r\n",
+    "        # c_buy2 = 0\r\n",
+    "        # if c_buy1:\r\n",
+    "        #     c_buy2 = env.round2(cust, selected_promo_c, cp2)\r\n",
     "        \r\n",
     "        small_ts_ind_reward= small_ts_buy1*chosen_price1_small_ts + small_ts_buy2*chosen_price2_small_ts*(1-shop_small_ts.discounts[selected_promo_small_ts])\r\n",
     "        u_ind_reward = u_buy1*chosen_price1_ucb + u_buy2*chosen_price2_ucb*(1-shop_ucb.discounts[selected_promo_u])\r\n",
@@ -282,7 +282,7 @@
     "        big_ts_ind_reward = big_ts_buy1*price1_big_ts + big_ts_buy2*price2_big_ts*(1-shop_big_ts.discounts[selected_promo_big_ts])\r\n",
     "        ts3_ind_reward = ts3_buy1*price1_ts3 + ts3_buy2*price2_ts3*(1-shop_ts3.discounts[selected_promo_ts3])\r\n",
     "\r\n",
-    "        calt_ind_reward = env.true_conv1[cust, cp1idx]*cp1 + env.true_conv1[cust, cp1idx]*env.true_conv2[selected_promo_calt, cust, cp2idx]*cp2*(1-shop_small_ts.discounts[selected_promo_calt])\r\n",
+    "        c_ind_reward = env.true_conv1[cust, cp1idx]*cp1 + env.true_conv1[cust, cp1idx]*env.true_conv2[selected_promo_c, cust, cp2idx]*cp2*(1-shop_small_ts.discounts[selected_promo_c])\r\n",
     "\r\n",
     "        \r\n",
     "        norm_small_ts_ind_reward = small_ts_ind_reward / max_ind_reward\r\n",
@@ -317,14 +317,14 @@
     "        revenue_ts.append(ts_ind_reward)\r\n",
     "        revenue_ts3.append(ts3_ind_reward)\r\n",
     "        revenue_big_ts.append(big_ts_ind_reward)\r\n",
-    "        revenue_calt.append(calt_ind_reward)\r\n",
+    "        revenue_c.append(c_ind_reward)\r\n",
     "\r\n",
     "    small_ts_rewards_per_class_per_day.append(np.mean(revenue_small_ts))\r\n",
     "    u_rewards_per_class_per_day.append(np.mean(revenue_ucb))\r\n",
     "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\r\n",
     "    ts3_rewards_per_class_per_day.append(np.mean(revenue_ts3))\r\n",
     "    big_ts_rewards_per_class_per_day.append(np.mean(revenue_big_ts))\r\n",
-    "    calt_rewards_per_class_per_day.append(np.mean(revenue_calt))"
+    "    c_rewards_per_class_per_day.append(np.mean(revenue_c))"
    ],
    "outputs": [],
    "metadata": {}
@@ -333,8 +333,8 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "print(np.cumsum(calt_rewards_per_class_per_day)[-1] - np.cumsum(small_ts_rewards_per_class_per_day)[-1])\r\n",
-    "print(np.cumsum(calt_rewards_per_class_per_day)[-1] - np.cumsum(u_rewards_per_class_per_day)[-1])"
+    "print(np.cumsum(c_rewards_per_class_per_day)[-1] - np.cumsum(small_ts_rewards_per_class_per_day)[-1])\r\n",
+    "print(np.cumsum(c_rewards_per_class_per_day)[-1] - np.cumsum(u_rewards_per_class_per_day)[-1])"
    ],
    "outputs": [
     {
@@ -354,7 +354,7 @@
    "source": [
     "import matplotlib.pyplot as plt\r\n",
     "plt.plot(np.cumsum(u_rewards_per_class_per_day), color='green', label='UCB')\r\n",
-    "plt.plot(np.cumsum(calt_rewards_per_class_per_day), color='orange', label='Clairvoyant Alt')\r\n",
+    "plt.plot(np.cumsum(c_rewards_per_class_per_day), color='orange', label='Clairvoyant')\r\n",
     "plt.plot(np.cumsum(small_ts_rewards_per_class_per_day), color='purple', label='3-Learner TS')\r\n",
     "plt.plot(np.cumsum(ts_rewards_per_class_per_day), color='red', label='2-step TS')\r\n",
     "plt.plot(np.cumsum(ts3_rewards_per_class_per_day), color='black', label='3-step Dependent TS')\r\n",
@@ -394,11 +394,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "source": [
-    "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(ts_rewards_per_class_per_day)), color='red', label='2-step TS')\r\n",
-    "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(ts3_rewards_per_class_per_day)), color='black', label='3-step Dependent TS')\r\n",
-    "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(big_ts_rewards_per_class_per_day)), color='blue', label='Big TS')\r\n",
-    "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(small_ts_rewards_per_class_per_day)), color='purple', label='2-step TS')\r\n",
-    "plt.plot(np.cumsum(np.array(calt_rewards_per_class_per_day) - np.array(u_rewards_per_class_per_day)), color='green', label='Big TS')\r\n",
+    "plt.plot(np.cumsum(np.array(c_rewards_per_class_per_day) - np.array(ts_rewards_per_class_per_day)), color='red', label='2-step TS')\r\n",
+    "plt.plot(np.cumsum(np.array(c_rewards_per_class_per_day) - np.array(ts3_rewards_per_class_per_day)), color='black', label='3-step Dependent TS')\r\n",
+    "plt.plot(np.cumsum(np.array(c_rewards_per_class_per_day) - np.array(big_ts_rewards_per_class_per_day)), color='blue', label='Big TS')\r\n",
+    "plt.plot(np.cumsum(np.array(c_rewards_per_class_per_day) - np.array(small_ts_rewards_per_class_per_day)), color='purple', label='2-step TS')\r\n",
+    "plt.plot(np.cumsum(np.array(c_rewards_per_class_per_day) - np.array(u_rewards_per_class_per_day)), color='green', label='Big TS')\r\n",
     "\r\n",
     "plt.legend()\r\n",
     "plt.xlabel('Days')\r\n",
